--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.6",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "node": "^14.13.0",
     "pg": "^8.4.0",
